[gd_scene format=3 uid="uid://cir6r66f5ktrs"]

[ext_resource type="Script" uid="uid://b7b4k4iymiceg" path="res://Scenes/room/room.gd" id="1_e02cn"]
[ext_resource type="PackedScene" uid="uid://bmjwyhfidksl2" path="res://Scenes/UI/gameUI.tscn" id="1_oksfc"]
[ext_resource type="Script" uid="uid://cyq2qlkyco7r2" path="res://Scenes/room/roomParallax.gd" id="2_pcytu"]

[node name="RoomTemplate" type="Node2D" unique_id=1718267346]
script = ExtResource("1_e02cn")

[node name="GameUi" parent="." unique_id=1653777319 instance=ExtResource("1_oksfc")]
top_level = true

[node name="Parallax2D" type="Parallax2D" parent="." unique_id=1725487271]
script = ExtResource("2_pcytu")
sensitivity = 5
startPos = Vector2(500, 800)

[node name="background" type="Node2D" parent="Parallax2D" unique_id=2135513620]

[node name="bg_a" type="Sprite2D" parent="Parallax2D/background" unique_id=2080803100]
position = Vector2(960, 540)
scale = Vector2(1.3, 1.3)

[node name="bg_b" type="Sprite2D" parent="Parallax2D/background" unique_id=519933799]
position = Vector2(960, 540)
scale = Vector2(1.3, 1.3)
